--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_test_compose">TestCompose</string>
     <string name="title_activity_bottom_nav_container_screen">BottomNavContainer_Screen</string>
+    <string name="title_activity_question">QuestionActivity</string>
 
 
 </resources>
